Added a new TODO.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-                    The Ada Microkernel Project (TAMP)
+bg                    The Ada Microkernel Project (TAMP)
 
 Legal
 -----
@@ -142,4 +142,10 @@ Bugs
 I've submitted the following bug as the compiler cannot create a libgnat.a from
 a GPR file, this has to be done via make, it is no longer a blocker:
 
-  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=47717
+  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=47717 - CLOSED
+
+TODO
+----
+
+Add a check for each tool used, patch, svn, git, bison, flex and exit completely
+if they're not available.
