Two more GNAT Pro references added.

--- a/README
+++ b/README
@@ -318,3 +318,9 @@ http://uk.farnell.com/ftdi/v2dip1-32/module-dev-32-pin-1x-usb-vnc2/dp/1825829
 
 [10] eStick:
 http://embsys.technikum-wien.at/staff/horauer/estick/estick.php
+
+[11] GNAT Pro User's Guide Supplement for Cross Platforms:
+http://www.adacore.com/wp-content/files/auto_update/gnat-cross-docs/html/gnat_ugx.html
+
+[12] GNAT Pro User's Guide Supplement for High-Integrity Edition Platforms:
+http://www.adacore.com/wp-content/files/auto_update/gnat-hie-docs/html/gnathie_ug.html
